# Crystal-Web-Archiver

./: .coverage  .gitignore  .pylintrc  COMPILING.txt  CONTRIBUTING.md  Dockerfile.lambda  README.md  RELEASE_NOTES.md  deploy-lambda.sh  lambda_handler.py  lambda_server.py  mypy.ini  pyproject.toml  run_tests_in_parallel-README.md  run_tests_in_parallel.py
.claude/: settings.json
.claude/hooks/: pylint-check.sh
.claude/skills/test-skeletons/: SKILL.md
.github/: copilot-instructions.md
.github/instructions/: end_to_end_tests.instructions.md
.github/workflows/: ci.yaml  copilot-setup-steps.yml  push-github-action.yml  watchdog.py
crystal/: __init__.py  browser.py  download.py  html.py  main.py  model.py  packages.py  server.py  task.py  ui.py  xcollections.py  xfutures.py  xthreading.py
crystal/browser/: __init__.py  addgroup.py  addrooturl.py  entitytree.py  tasktree.py
crystal/ui/: BetterMessageDialog.py  __init__.py  tree.py  tree2cli.py
doc/: crystalproj_project_format.md  how_to_make_wxpython_wagon.md  model_durability_and_atomicity.md
doc/how_to_make_wxpython_wagon/: README.md  build_wagon_py314_wx425.sh  build_wagon_wx425_py313.sh  build_wagon_wx425_py314.sh
doc/in_progress/: pack16-tasks.md
doc/tech_designs/: aliases.md  netzipfile.md  pack16.md
setup/: .gitignore  Makefile  copy_aws_deps.py  download_universal2_wheels-worker.sh  download_universal2_wheels.sh  install-linux.sh  localize_requirements.py  make-mac.sh  make-win.bat  make-win.ps1  make_win_installer.py  requirements.txt  run_exe.py  setup.py  setup_settings.py  verify_universal2.sh  win-installer.iss
setup/media/: AppIconMac.icns  DocIconMac.icns  LauncherIcon.icns  crystal.desktop  vcruntime140-README.txt
src/: crystal_banned_api.py  main.py
src/crystal/: __init__.py  __main__.py  app_preferences.py  cli.py  css.py  db.py  download.py  filesystem.py  footer_banner.py  html.py  install.py  main.py  metasoup.py  model.py  os.py  packages.py  predict_group.py  progress.py  server.py  shell.py  task.py  tests.py  url_input.py  urls.py  xcollections.py  xfutures.py  xthreading.py
src/crystal/browser/: __init__.py  about.py  addgroup.py  addrooturl.py  entitytree.py  entitytree_info.py  icons.py  new_alias.py  new_group.py  new_group_info.py  new_root_url.py  open_project_from_s3.py  preferences.py  tasktree.py
src/crystal/doc/: css.py  generic.py  json.py  xml.py
src/crystal/doc/html/: __init__.py  basic.py  soup.py
src/crystal/filesystem/: __init__.py  local.py
src/crystal/html/: __init__.py  basic.py  soup.py
src/crystal/lint/: fix.py  rules.py
src/crystal/model/: __init__.py  alias.py  pack16.py  project.py  resource.py  resource_group.py  resource_revision.py  root_resource.py  s3vfs.py  util.py
src/crystal/plugins/: minimalist_baker.py  phpbb.py  substack.py  wordpress.py
src/crystal/plugins/util/: params.py
src/crystal/progress/: interface.py  ui.py
src/crystal/resources/: __init__.py  application-vnd.crystal-opener.svg-README.txt  application-vnd.crystal-opener.xml  application-vnd.crystal.opener.xml  crystal.desktop  docicon.svg-README.txt  logotext-README.md  not_in_archive_image-README.txt
src/crystal/server/: __init__.py  api.py  footer_banner.py  lambda_handler.py  special_pages.py
src/crystal/tests/: README.md  index.py  parallel.py  test_about_box.py  test_addgroup.py  test_addrooturl.py  test_bulkheads.py  test_callout.py  test_cli.py  test_disk_io_errors.py  test_do_not_download_groups.py  test_download.py  test_download_body.py  test_edit_alias.py  test_edit_group.py  test_edit_root_url.py  test_entitytree.py  test_file_extension_visibility.py  test_hibernate.py  test_icons.py  test_install_to_desktop.py  test_load_urls.py  test_log_drawer.py  test_main_window.py  test_menus.py  test_new_alias.py  test_new_group.py  test_new_root_url.py  test_open_project.py  test_parse_html.py  test_preferences.py  test_profile.py  test_project_format_upgrade.py  test_project_migrate.py  test_readonly_mode.py  test_runner.py  test_server.py  test_shell.py  test_ssd.py  test_task_crashes.py  (+6 more)
src/crystal/tests/aspects/: test_do_not_download_groups.py  test_external_urls.py  test_readonly_mode.py  test_untitled_projects.py
src/crystal/tests/cli/: test_cli.py  test_runner.py  test_shell.py
src/crystal/tests/model/: test_disk_io_errors.py  test_hibernate.py  test_model_durability_and_atomicity.py  test_pack16.py  test_project_migrate.py  test_projects_on_s3.py  test_url_normalization.py
src/crystal/tests/runner/: parallel.py  serial.py  shared.py
src/crystal/tests/task/: test_download.py  test_download_body.py  test_tasks.py
src/crystal/tests/test_data/: __init__.py  banner.txt
src/crystal/tests/ui/: test_about_box.py  test_callout.py  (+6 more)
src/crystal/ui/: BetterMessageDialog.py  actions.py  branding.py  callout.py  clickable_text.py  dialog.py  log_drawer.py  nav.py  tree.py  tree2.py  tree2cli.py
src/crystal/util/: ai_agents.py  bring_app_to_front.py  bulkheads.py  cache.py  caffeination.py  cli.py  cloak.py  collections.py  controls.py  db.py  ellipsis.py  fastsoup.py  features.py  filesystem.py  finderinfo.py  fix_string_quotes.py  generate_logotext.py  gio.py  headless.py  http_date.py  lazymap.py  listenable.py  macos_app.py  minify.py  netzipfile.py  notimplemented.py  pipes.py  ports.py  profile.py  progress.py  quitting.py  readers.py  server_ports.py  sizes.py  ssd.py  test_mode.py  thread_debug.py  tqdm_debug.py  unicode_labels.py  unsaved_project.py  (+37 more)
src/crystal_on_aws/: Dockerfile.lambda  crystal.cloudformation.yaml  custom-domain-add.sh  custom-domain-remove.sh  deploy-cf-template.sh  deploy-image.sh  deploy.sh  lambda_server.py  switch-stack-version.sh
tests/: test_apsw_exception_translation.py  test_caffeination.py  test_code_quality.py  test_lint_rules.py  test_macos_app.py  test_nav.py  test_netzipfile.py  test_pack16.py  test_parse_css.py  test_parse_html.py  test_pipes.py  test_pylint_rules.py  test_resources.py  test_runner.py  test_s3_filesystem.py  test_test_runner.py  test_version.py  test_wx_fake.py  test_xfuture.py
(+49 files in other folders)
