[tool.poetry]
name = "crystal-web"
version = "1.9.0b"
description = "Downloads websites for long-term archival."
authors = ["David Foster <david@dafoster.net>"]
readme = "README.md"
license = "Proprietary"
repository = "https://github.com/davidfstr/Crystal-Web-Archiver"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: Other/Proprietary License",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Software Development :: Version Control",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: System :: Archiving :: Mirroring",
]
packages = [
    { include = "crystal", from = "src" },
]
include = [
    "README/logo.png",
    "README/logo@2x.png",
]

[tool.poetry.urls]
"Tutorial" = "https://github.com/davidfstr/Crystal-Web-Archiver/tree/main#tutorial-"
"Release notes" = "https://github.com/davidfstr/Crystal-Web-Archiver/blob/main/RELEASE_NOTES.md"

[tool.poetry.scripts]
# Install "crystal" binary as CLI command. Allow installation via "pipx".
crystal = 'crystal.__main__:main'

[tool.poetry.dependencies]
# NOTE: Python 3.8 is the last Python to support Windows 7
# NOTE: Python 3.11 is the latest Python supported by py2exe 0.13.0.0
python = ">=3.8,<3.12"
# NOTE: When changing the version of wxPython to Y, you'll need to make sure
#       there is a precompiled wheel for {Python 3.X, wxPython Y, OS}
#       for every {Python 3.X, OS} in continuous integration (CI) jobs
#       (defined by push-github-action.yml) so that CI jobs don't take
#       a very long time to complete. If wheels are missing (which is common
#       for Linux) you'll need to precompile a .wgn yourself for the platform.
#       See instructions in: doc/how_to_make_wxpython_wagon.md
wxPython = "==4.2.1"
beautifulsoup4 = "^4.9.3"
py2app = { version = "^0.23", markers = "sys_platform == 'darwin'" }
# NOTE: py2exe 0.13.0.0 is the earliest version that supports Python 3.11
py2exe = { version = "^0.13.0.0", markers = "sys_platform == 'win32'" }
tinycss2 = "^1.1.0"
appdirs = "^1.4.4"
colorama = "^0.4.4"
# Bundle latest version of HTTPS & SSL certificates
certifi = "*"
tzlocal = "^4.2"
lxml = "^5.2.2"
tqdm = "^4.65.0"
sortedcontainers = "^2.4.0"
# For manual memory leak profiling with "guppy" module
guppy3 = "^3.1.3"
xattr = { version = "^0.10.1", markers = "sys_platform == 'darwin'" }
psutil = { version = "^5.9.5", markers = "sys_platform == 'linux'" }
pywin32 = { version = "*", markers = "sys_platform == 'win32'" }
wmi = { version = "*", markers = "sys_platform == 'win32'" }
typing-extensions = "^4.8.0"
types-tqdm = "^4.66.0.20240106"

[tool.poetry.dev-dependencies]
pytest = ">=7.0,<8.0"
mypy = "==1.6.1"
types-tzlocal = "^4.2.0"
PyScreeze = "^0.1.28"
flameprof = "^0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
