[project]
name = "crystal-web"
version = "2.0.1"
description = "Downloads websites for long-term archival."
authors = [
    { name = "David Foster", email = "david@dafoster.net" },
]
readme = "README.md"
license = { text = "PolyForm-Noncommercial-1.0.0" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Environment :: X11 Applications :: GTK",
    "Environment :: X11 Applications :: Gnome",
    "Environment :: X11 Applications :: KDE",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: Free for non-commercial use",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Version Control",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: System :: Archiving :: Mirroring",
]

[project.urls]
homepage = "https://dafoster.net/projects/crystal-web-archiver/"
"Tutorial" = "https://github.com/davidfstr/Crystal-Web-Archiver/tree/main#tutorial-"
documentation = "https://github.com/davidfstr/Crystal-Web-Archiver/wiki"
"Release notes" = "https://github.com/davidfstr/Crystal-Web-Archiver/blob/main/RELEASE_NOTES.md"
repository = "https://github.com/davidfstr/Crystal-Web-Archiver"
"Bug tracker" = "https://github.com/davidfstr/Crystal-Web-Archiver/issues"

[project.scripts]
# Install "crystal" binary as CLI command. Allow installation via "pipx".
crystal = 'crystal.__main__:main'

[tool.poetry]
packages = [
    { include = "crystal", from = "src" },
]
include = [
    "README/crystal-ui.png",
    "README/download-complex-poster-play.png",
    "README/download-simple-poster-play.png",
    "README/logo.png",
    "README/logo@2x.png",
]

[tool.isort]
src_paths = ["src/crystal", "setup/*.py", "tests"]
skip = ["lib", "test_data"]
line_length = 79
multi_line_output = 5  # vert-grid-grouped; https://pycqa.github.io/isort/docs/configuration/multi_line_output_modes.html
use_parentheses = true  # never use backslash to continue lines
include_trailing_comma = true
force_alphabetical_sort = true  # don't use separate sections for stdlib vs. 3rd party vs. 1st party imports
force_sort_within_sections = true  # combine from-imports with regular imports
order_by_type = false  # don't sort constants specially

[tool.poetry.dependencies]
# NOTE: Python 3.13 is the latest Python supported by py2exe 0.14.0.0
python = ">=3.11,<3.14"
# NOTE: When changing the version of wxPython to Y, you'll need to make sure
#       there is a precompiled wheel for {Python 3.X, wxPython Y, OS}
#       for every {Python 3.X, OS} in continuous integration (CI) jobs
#       (defined by push-github-action.yml) so that CI jobs don't take
#       a very long time to complete. If wheels are missing (which is common
#       for Linux) you'll need to precompile a .wgn yourself for the platform.
#       See instructions in: doc/how_to_make_wxpython_wagon.md
wxPython = "4.2.3"
beautifulsoup4 = "^4.9.3"
py2app = { version = "^0.28", markers = "sys_platform == 'darwin'" }
# NOTE: py2exe 0.14.0.0 supports Python 3.11, 3.12, and 3.13.
py2exe = { version = "^0.14.0.0", markers = "sys_platform == 'win32' and python_version >= '3.11'" }
tinycss2 = "^1.1.0"
appdirs = "^1.4.4"
colorama = "^0.4.4"
tzlocal = "^4.2"
lxml = "^5.2.2"
tqdm = "^4.65.0"
sortedcontainers = "^2.4.0"
# For manual memory leak profiling with "guppy" module
guppy3 = "^3.1.5"
xattr = { version = "^1.1.4", markers = "sys_platform == 'darwin'" }
psutil = { version = "^5.9.5", markers = "sys_platform == 'linux'" }
pywin32 = { version = "*", markers = "sys_platform == 'win32'" }
wmi = { version = "*", markers = "sys_platform == 'win32'" }
typing-extensions = "^4.8.0"
types-tqdm = "^4.66.0.20240106"
truststore = "*"
send2trash = "^1.8.3"
jaraco-text = ">=4.0.0"
wakepy = "^0.9.0"
trycast = "^1.2.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0,<8.0"
mypy = "==1.6.1"
types-tzlocal = "^4.2.0"
PyScreeze = { version = "^0.1.28", markers = "sys_platform != 'darwin'" }
flameprof = "^0.4"
# Declare setuptools explicitly for setup.py and py2exe.
# NOTE: setuptools >= 78.1.1 avoids a security vulnerability:
#       https://github.com/davidfstr/Crystal-Web-Archiver/security/dependabot/15
# NOTE: setuptools 80+ has py2app conflicts with backports.tarfile in Python 3.11
setuptools = [
    { version = ">=70,<71", markers = "python_version < '3.12'" },
    { version = ">=78.1.1", markers = "python_version >= '3.12'" }
]
isort = "^6.0.1"
# Pillow >=9.2.0 is needed by PyScreeze for screenshot support on Linux.
pillow = { version = ">=9.2.0", markers = "sys_platform == 'linux'" }
# For browser automation tests
playwright = "^1.48.0"
# For serializing local function closures in Playwright tests
dill = "^0.3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
